# Backend

./: .env  Cargo.toml  README.md
migrations/: 20220115150349_create-tables.sql
src/: build.rs  main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/errors/: mod.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/models/: user.rs
