[package]
name = "shield_factory"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "2"
actix-rt = "1"
actix-identity = "0.2"
actix-web-httpauth = "0.4"
config = "0.10"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
reqwest = "0.9"
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1"
argonautica = {version = "0.2", features = ["simd"]}
futures = { version = "0.3", features = ["compat"] }
regex = "1"
rand = "0.8.4"
web3 = { version = "0.14.0", optional = true }
actix-files = "0.3.0"
actix-web-static-files = "2.0.0"

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]